Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19766

innodb.leaf_page_corrupted_during_recovery failed in buildbot with Warning Data too long for column

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/kvm-asan/builds/1453

      bb-10.3-release 1135244a647e423f6a7b2122ad9c3052

      nnodb.leaf_page_corrupted_during_recovery 'innodb' w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2019-06-14 10:50:28
      Warnings:
      Warning	1406	Data too long for column 'line' at row 10
      line
       len 16384; hex 6a756e6b000000130000000effffffff000000000019399345bf0000000000000000000000050002018e800300000000007e0005000000010000000000000000000000000000000000190000000000000000000000000000000000000000010002001b696e66696d756d0002000b000073757072656d756d00000010fff28000000c0000000000008000000000000074657374382020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000
      ^ Found warnings in /dev/shm/var/1/log/mysqld.1.err
      

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.